# zero2prod

./: Cargo.toml
scripts/: init_db.sh
src/: configuration.rs  di.rs  lib.rs  main.rs  registeries.rs  startup.rs  state.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
