[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
claim = "0.5.0"
config = "0.14.0"
fake = "~2.3"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = "0.12.4"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unicode-segmentation = "1.11.0"
uuid = { version = "1.8.0", features = ["v4"] }
validator = "0.18.1"

[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]


[dev-dependencies]
# quickcheck = "1.0.3"
# quickcheck_macros = "1.0.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
